--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,5 +1,8 @@
 .card {
     padding-left: 37px;
+    flex: 0 0 auto;      
+    display: flex;         
+    flex-direction: column;  
 }
 
 .image-container {
